--- a/Generate_energy_at_events_talks_etc.adoc
+++ b/Generate_energy_at_events_talks_etc.adoc
@@ -24,7 +24,7 @@ Here's a brief list of some of the largest and longest-running events happening 
 
 - "OSCON provides complete coverage of open source technology and projects, no matter the origin or affiliation. Rather than focus on a single language or aspect, our program solely focuses on projects in areas of innovation including cloud, AI, infrastructure, blockchain, edge computing, architecture, and emerging languages." https://conferences.oreilly.com/oscon/oscon-or[OSCON]
 
-- "FOSDEM is organised by the community for the community. It gives free and open source software developers and communities a place to meet, to be informed about the latest developments in the free and open source world; and attend interesting talks and presentations on various topics by project leaders and committers." [https://fosdem.org/]FOSDEM
+- "FOSDEM is organised by the community for the community. It gives free and open source software developers and communities a place to meet, to be informed about the latest developments in the free and open source world; and attend interesting talks and presentations on various topics by project leaders and committers." https://fosdem.org/[FOSDEM]
 
 - "FOSSASIA Summit is the premier Free and Open Source technology event in Asia for developers, start-ups, and contributors. Projects at FOSSASIA range from open hardware, to design, graphics and software. FOSSASIA was established in 2009. Previous events took place in Vietnam, Thailand, Cambodia, China and India." https://summit.fossasia.org/[FOSSASIA]
 
@@ -38,7 +38,7 @@ Here's a brief list of some of the largest and longest-running events happening 
 
 - ApacheCon is the "place to learn the latest about Apache projects and developing Open Source innovations and communities 'The Apache Way.' ApacheCon is also where Apache projects come to build stronger communities, forge bonds amongst projects, and deepen connections with users and contributors." https://www.apachecon.com/[ApacheCon]
 
-- "Wikimania is the annual conference celebrating all the free knowledge projects hosted by the Wikimedia Foundation. Hundreds of volunteers and Free Knowledge leaders from around the world gather to discuss issues, report on new projects and approaches, and exchange ideas." [https://wikimania.wikimedia.org/wiki/Wikimania]Wikimania
+- "Wikimania is the annual conference celebrating all the free knowledge projects hosted by the Wikimedia Foundation. Hundreds of volunteers and Free Knowledge leaders from around the world gather to discuss issues, report on new projects and approaches, and exchange ideas." https://wikimania.wikimedia.org/wiki/Wikimania[Wikimania]
 
 - The Linux Foundation also runs a series of events around the world aimed at building sustainable ecosystems around open source projects to accelerate technology development and industry adoption. https://events.linuxfoundation.org/[Linux Foundation Events]
 
