--- a/marketing/SCaLE_18x_Workshop-_-06_March_2020--content.adoc
+++ b/marketing/SCaLE_18x_Workshop-_-06_March_2020--content.adoc
@@ -1,23 +1,11 @@
 # Content for various needs around the workshop
 
-## Description
+## Potential Workshop Description
 
-This is a workshop for understanding and participating in the 2.0
-update to the community management best practices guide, The Open
-Source Way. We'll be leading new contributors through the
-participation process. There are activities for short (30 to 60
-minutes) and longer (1 to 4 hours) periods of time, so you can fit
-this into your busy Friday at SCaLE.
+Building communities is hard. Let's write a book to make it easier.
 
-If you are a member of an open source community or practitioner of community management, you are
-likely familiar with how often you need to provide the same advice and
-guidance to new and even experienced members of your community.
+In this workshop at SCaLE, you'll learn more about The Open Source Way, a collaboratively written compendium of best practices for initiating, nurturing, growing, and maintaining groups of passionate contributors—and one that needs your contributions.
 
-While this guide is primarily for helping perform the tasks of community management, it is written by a range of community
-managers and other experienced practitioners. It is a collaboration, a sharing of opinions and practices,
-so you get a diverse and wider-ranging set of viewpoints and
-experience informing the guide.
+You'll impact this project simply by attending part or all of this interactive workshop and writing sprint. Comment on the book's proposed outline, learn the project's toolchain, and volunteer to contribute you hard-won best practices to the collection.
 
-Join us, bring your laptop, and participate in the planning,
-reviewing, and creation of content for the next version of The Open
-Source Way.
+Participating is easy: Simply attend any number of our planned workshop activities—shorter (30 to 60 minutes) review and feedback sessions, and longer (1 to 4 hours) writing sprints—on Friday, March 06, in the Pasadena Convention Center {ROOM}. Bring your laptop, your ideas, and your collaborative spirit—and be ready participate in planning, reviewing, and creating content for The Open Source Way.
