--- a/Announcing_Releases.adoc
+++ b/Announcing_Releases.adoc
@@ -8,83 +8,94 @@ Following some basic guidelines for coordinating release announcements can ensur
 
 == General guidelines
 
-*Do not set any release date for a Friday or significant holiday. The ideal release date for maximum coverage is Tuesday.
-*If at all possible, coordinate major releases with relevant conferences and events.
-*Tailor release announcements and blogs to encourage both _use_ of the software as well as _contributions_ to it.
-*Talk about how a project benefits the user; explain benefits rather than focusing on technical details.
+* Do not set any release date for a Friday or significant holiday. The ideal release date for maximum coverage is Tuesday.
+* If at all possible, coordinate major releases with relevant conferences and events.
+* Tailor release announcements and blogs to encourage both _use_ of the software as well as _contributions_ to it.
+* Talk about how a project benefits the user; explain benefits rather than focusing on technical details.
 
 == Track: Release candidate and final release for major point release X.0
 
 *No less than three weeks from release date:*
-*Create a collaborative document (Etherpad, Google Doc) to include highlighted features for the release announcement, press release, and blog.
+
+* Create a collaborative document (Etherpad, Google Doc) to include highlighted features for the release announcement, press release, and blog.
 
 *Two weeks from release date:*
-*Generate a changelog outlining notable changes to the release that will need to be documented and included within the main changelog file.
-*Merge any relevant content from the updated changelog into the release announcement, press release, and blog.
-*Create press release and send to your organization's media relations team for vetting
+
+* Generate a changelog outlining notable changes to the release that will need to be documented and included within the main changelog file.
+* Merge any relevant content from the updated changelog into the release announcement, press release, and blog.
+* Create press release and send to your organization's media relations team for vetting
 
 *One week from release date:*
-*Schedule social media content for distribution before, during, and after release date.
+
+* Schedule social media content for distribution before, during, and after release date.
 
 *Three days from release date:*
-*Confirm release manager and engineering lead have signed off on release announcement and blog.
-*Confirm media relations staff have signed off on press release.
+
+* Confirm release manager and engineering lead have signed off on release announcement and blog.
+* Confirm media relations staff have signed off on press release.
 
 *Two days from release date:*
-*Complete all final QA/smoke tests.
-*Place build on appropriate servers.
-*Stage all documentation and review it for display issues.
+
+* Complete all final QA/smoke tests.
+* Place build on appropriate servers.
+* Stage all documentation and review it for display issues.
 
 *One day before release date:*
-*Send copies of press release to relevant media outlets.
+
+* Send copies of press release to relevant media outlets.
 
 *Day of release:*
-*Make all code and documentation visible to the world.
-*Begin publishing scheduled social media and blog materials.
-*Post press release on newswires (in conjunction with media relations team)
+
+* Make all code and documentation visible to the world.
+* Begin publishing scheduled social media and blog materials.
+* Post press release on newswires (in conjunction with media relations team)
 
 == Track: Release candidate and final release for point release X.Y
 
 *No less than 2 weeks from release date:*
-*Create a collaborative document (Etherpad, Google Doc) to include highlighted features for the release announcement and blog.
+* Create a collaborative document (Etherpad, Google Doc) to include highlighted features for the release announcement and blog.
 
 *One week from release date:*
-*Schedule social media content for distribution before, during, and after release date.
-*Generate a changelog outlining notable changes to the release that will need to be documented and included within the main changelog file.
-*Merge any relevant content from the updated changelog into the release announcement and blog.
+* Schedule social media content for distribution before, during, and after release date.
+* Generate a changelog outlining notable changes to the release that will need to be documented and included within the main changelog file.
+* Merge any relevant content from the updated changelog into the release announcement and blog.
 
 *Two days from release date:*
-*Ensure the release manager and engineering lead have signed off on release announcement and blog.
-*Complete all final QA/smoke tests.
-*Place build on appropriate servers.
-*Stage all documentation and review it for display issues.
+
+* Ensure the release manager and engineering lead have signed off on release announcement and blog.
+* Complete all final QA/smoke tests.
+* Place build on appropriate servers.
+* Stage all documentation and review it for display issues.
 
 *Day of release:*
-*Make all code and documentation visible to the world.
-*Begin publishing scheduled social media and blog materials.
-*Send copies of press release to relevant media outlets.
 
+* Make all code and documentation visible to the world.
+* Begin publishing scheduled social media and blog materials.
+* Send copies of press release to relevant media outlets.
 
 == Track: Final release for minor point release X.Y.Z
 
 *No less than one week from release date:*
-*Schedule social media content for distribution before, during, and after release date.
-*Generate a changelog outlining notable changes to the release that will need to be documented and included within the main changelog file.
-*Merge any relevant content from the updated changelog into the release announcement and blog.
+
+* Schedule social media content for distribution before, during, and after release date.
+* Generate a changelog outlining notable changes to the release that will need to be documented and included within the main changelog file.
+* Merge any relevant content from the updated changelog into the release announcement and blog.
 
 *Two days from release date:*
-*Ensure the release manager and engineering lead have signed off on release announcement and blog.
-*Complete all final QA/smoke tests.
-*Place build on appropriate servers.
-*Stage all documentation and review it for display issues.
+
+* Ensure the release manager and engineering lead have signed off on release announcement and blog.
+* Complete all final QA/smoke tests.
+* Place build on appropriate servers.
+* Stage all documentation and review it for display issues.
 
 *Day of release:*
-*Make all release artifacts and documentation visible to the world, if not already (release may be synced to mirrors ahead of actual release announcement).
-*Begin publishing scheduled social media and blog materials.
+
+* Make all release artifacts and documentation visible to the world, if not already (release may be synced to mirrors ahead of actual release announcement).
+* Begin publishing scheduled social media and blog materials.
 
 == After all major releases and significant point releases
 
-*Conduct a post-mortem to see what, if anything, could be done to improve the next release cycle.
+* Conduct a post-mortem to see what, if anything, could be done to improve the next release cycle.
 
 == Writing a press release/release announcement
 
@@ -107,20 +118,24 @@ Developed by a global community, `Project X` is a `[detailed paragraph of what t
 Notable enhancements to `Project X x.y` include:
 
 `[Detailed paragraph describing a first major feature]`
+
 `[Detailed paragraph describing a second major feature]`
+
 `[Detailed paragraph describing a third major feature]`
  
-A complete list of `Project X x.y` features is available on the Project X community release announcement page `[URL]`. `Project X x.y` `[detailed description of a two or three additional features]`.
+A complete list of `Project X x.y` features is available on the `Project X` community release announcement page `[URL]`. `Project X x.y` `[detailed description of a two or three additional features]`.
  
 `[If possible, add a quote from a prominent community member or technical lead about the new release here.]`
 
 *Additional Resources*
-- Read more about the `Project X x.y` release highlights `[URL]`
-- Get more `Project X` updates on Twitter `[URL]`
-- Read more about `Project X` community events `[URL]`
+
+* Read more about the `Project X x.y` release highlights `[URL]`
+* Get more `Project X` updates on Twitter `[URL]`
+* Read more about `Project X` community events `[URL]`
  
 *About `Project X`*
 
 `Project X` is `[a very detailed description of what the project is and what it can do]`.
+
 
 
