Normalizing sentence lines
Changing to one sentence per line to facilitate diffs.

--- a/marketing/SCaLE_18x_Workshop-_-06_March_2020--content.adoc
+++ b/marketing/SCaLE_18x_Workshop-_-06_March_2020--content.adoc
@@ -2,22 +2,15 @@
 
 ## Description
 
-This is a workshop for understanding and participating in the 2.0
-update to the community management best practices guide, The Open
-Source Way. We'll be leading new contributors through the
-participation process. There are activities for short (30 to 60
-minutes) and longer (1 to 4 hours) periods of time, so you can fit
-this into your busy Friday at SCaLE.
+This is a workshop for understanding and participating in the 2.0 update to the community management best practices guide, The Open Source Way.
+We'll be leading new contributors through the participation process.
+There are activities for short (30 to 60 minutes) and longer (1 to 4 hours) periods of time, so you can fit this into your busy Friday at SCaLE.
 
-If you are a member of an open source community or practitioner of community management, you are
-likely familiar with how often you need to provide the same advice and
-guidance to new and even experienced members of your community.
+If you are a member of an open source community or practitioner of community management, you are likely familiar with how often you need to provide the same advice and guidance to new and even experienced members of your community.
 
 While this guide is primarily for helping perform the tasks of community management, it is written by a range of community
-managers and other experienced practitioners. It is a collaboration, a sharing of opinions and practices,
-so you get a diverse and wider-ranging set of viewpoints and
+managers and other experienced practitioners.
+It is a collaboration, a sharing of opinions and practices, so you get a diverse and wider-ranging set of viewpoints and
 experience informing the guide.
 
-Join us, bring your laptop, and participate in the planning,
-reviewing, and creation of content for the next version of The Open
-Source Way.
+Join us, bring your laptop, and participate in the planning, reviewing, and creation of content for the next version of The Open Source Way.
