--- a/marketing/SCaLE_18x_Workshop-_-06_March_2020--content.adoc
+++ b/marketing/SCaLE_18x_Workshop-_-06_March_2020--content.adoc
@@ -2,8 +2,11 @@
 
 ## Description
 
-This is a workshop for understanding and participating in the 2.0 update to the community management best practices guide, The Open Source Way.
-We'll be leading new contributors through the participation process.
+Come join us to learn about and work directly on The Open Source Way guide 2.0 release.
+This is a collaboratively written guide of best practices for open source community management.
+Contributions of all types are welcome.
+
+In this workshop, we'll be leading new contributors through the participation and contribution process.
 There are activities for short (30 to 60 minutes) and longer (1 to 4 hours) periods of time, so you can fit this into your busy Friday at SCaLE.
 
 If you are a member of an open source community or practitioner of community management, you are likely familiar with how often you need to provide the same advice and guidance to new and even experienced members of your community.
@@ -13,4 +16,4 @@ managers and other experienced practitioners.
 It is a collaboration, a sharing of opinions and practices, so you get a diverse and wider-ranging set of viewpoints and
 experience informing the guide.
 
-Join us, bring your laptop, and participate in the planning, reviewing, and creation of content for the next version of The Open Source Way.
+Join us, bring your laptop, and participate in the planning, reviewing, and creating of content for the next version of The Open Source Way.
