Add placeholders files for guidebook sections (and update material on goals)

--- a/OUTLINE.adoc
+++ b/OUTLINE.adoc
@@ -19,3 +19,5 @@
 .. Developing a metrics plan
 . Avoiding Pitfalls and Learning From Mistakes
 . References and Case Studies
+.. References
+.. Case studies
