Sections/chapters from FOSDEM 2020, SCaLE 18x
These ideas came from discussions during the birds of a feather at FOSDEM and workshop at SCaLE.

I'll roll these into a new section file and content in the existing section files, so the changes appear in all the outline views.

It would be good to find a way to make this easier to keep track of ...

--- a/OUTLINE.adoc
+++ b/OUTLINE.adoc
@@ -1,5 +1,6 @@
 . Introductions
 .. Community 101
+.. Quickstart checklist
 .. Terminology and lexicon
 . Attracting Users
 .. Basics of a project
@@ -12,14 +13,19 @@
 .. What is a contribution
 .. Getting organized
 .. Onboarding
+... Contributors from easyfix to experienced
 .. Legal and governance
 .. Community roles
 .. Migrating code
+. Community Manager Self-Care
+.. _New section from FOSDEM BoF, chapters TBD_
 . Measuring Success
 .. Defining healthy communities
 .. Developing a metrics plan
 .. Announcing software releases
 . Avoiding Pitfalls and Learning From Mistakes
+.. How to all extra stories
+.. Open source practitioners interviews; transcripts and "why" stories
 . References and Case Studies
 .. References
 .. Case studies
