Onboarding gradients - SCaLE 18x workshop
The request was both made to us as a project but also as a section for the book--make sure that this chapter about onboarding includes making sure there are easyfix/non-expert ways to participate and contribute.

--- a/growing_contributors_section.adoc
+++ b/growing_contributors_section.adoc
@@ -3,6 +3,7 @@
 .. What is a contribution
 .. Getting organized
 .. Onboarding
+... Contributors from easyfix to experienced
 .. Legal and governance
 .. Community roles
 .. Migrating code
