Stories and interviews - FOSDEM/SCaLE addition
Stories in this final section have at least two forms:
- Why-to tales in narrative form that are perhaps specific to an experience, industry, etc. that could potentially be swapped in for a different story in a how-to chapter.
- Full transcripts and tagged/categorized tales from interviews of various open source practitioners.

--- a/avoiding_pitfalls_section.adoc
+++ b/avoiding_pitfalls_section.adoc
@@ -1,1 +1,3 @@
 . Avoiding Pitfalls and Learning From Mistakes
+.. Home to all extra stories
+.. Open source practitioners interviews; transcripts and "why" stories
