--- a/OUTLINE.adoc
+++ b/OUTLINE.adoc
@@ -5,6 +5,7 @@
 . Attracting Users
 .. Basics of a project
 .. Driving adoption
+.. Creating diverse and inclusive communities
 . Guiding participants
 .. Why do people participate in open source?
 .. How participants help the projects they love so much
@@ -23,7 +24,7 @@
 .. Announcing software releases
 . Avoiding Pitfalls and Learning From Mistakes
 .. Legal issues in communities
-.. Community Manager Self-Care
+.. Community manager self-care
 .. Open source practitioners interviews; transcripts and "why" stories
 .. Home to all extra stories
 . References and Case Studies
